updated to include WebService test example code.

--- a/HTMLLogSpec/HTMLLogSpec/Tests/App.config
+++ b/HTMLLogSpec/HTMLLogSpec/Tests/App.config
@@ -30,7 +30,7 @@
     <add key="LogLevel" value="SUCCESS"/>
     <add key="LogLevel" value="WARNING"/>
     <add key="LogLevel" value="ERROR"/>-->
-    <add key="LogLevel" value="GENERIC" />
+    <add key="LogLevel" value="INFORMATION" />
 
     <!-- Logging Types
     <add key="LogType" value="CONSOLE"/>
