--- a/Framework/SpecFlowExtensionNUnitTests/SpecFlowExtensionNUnitTests.csproj
+++ b/Framework/SpecFlowExtensionNUnitTests/SpecFlowExtensionNUnitTests.csproj
@@ -8,12 +8,16 @@
     <AssemblyName>SpecFlowExtensionNUnitTests</AssemblyName>
 
     <RootNamespace>SpecFlowExtensionNUnitTests</RootNamespace>
-    
+
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
     <GenerateBindingRedirectsOutputType>true</GenerateBindingRedirectsOutputType>
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="coverlet.collector" Version="1.2.1">
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+      <PrivateAssets>all</PrivateAssets>
+    </PackageReference>
     <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
     <PackageReference Include="NUnit" Version="3.12.0" />
     <PackageReference Include="NUnit3TestAdapter" Version="3.16.1" />
